# nif

./: .README.md.un~  .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  MANIFEST.in  README.md  README.md~  api_nif_data.html  api_nif_demo.html  api_nif_layers.html  api_nif_model.html  api_nif_optimizers.html  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  student.json
.doctrees/: api_nif_data.doctree  api_nif_demo.doctree  api_nif_layers.doctree  api_nif_model.doctree  api_nif_optimizers.doctree  environment.pickle  index.doctree
.github/workflows/: documentation.yaml  run-tests.yml
_static/: classic.css  sidebar.js
dev/: log  train.py
docs/: .buildinfo  .toknow.un~  README.rst  api_nif_data.html  api_nif_demo.html  api_nif_layers.html  api_nif_model.html  api_nif_model.rst  api_nif_optimizers.html  conf.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  toknow
docs/.doctrees/: api_nif_data.doctree  api_nif_demo.doctree  api_nif_layers.doctree  api_nif_model.doctree  api_nif_optimizers.doctree  environment.pickle  index.doctree
docs/_sources/: api_nif_data.rst.txt  index.rst.txt
docs/source/: api_nif_layers.rst  conf.py  index.rst
docs2/: api_nif_demo.rst
nif/: __init__.py  model.py
source/: api_nif_optimizers.rst  conf.py
tutorial/: 1_simple_1d_wave.py  3_multi_scale_linear_NIF.ipynb  4_get_gradients_by_wrapping_model_with_layer.ipynb  5_large_scale_training_on_tensorflow_record_data.ipynb  log  test.py
(+972 files in other folders)
