[metadata]
description-file = README.md

# flake8 settings
[flake8]
exclude =
    .git,
    .venv,
    dist,
    build,
    __pycache__
    dev
ignore =
    W503         # Line break before binary operator - Conflicts black
    E203         # Whitespace before ':' - Conflicts black
per-file-ignores =
    __init__.py:F401,F403
max-line-length = 110
import-order-style = smarkets
statistics = True
count = True
verbose = 1
# format = [%(code)s] %(text)s @ %(path)s:%(row)d:%(col)d
